# cubeb-coreaudio-rs

./: .travis.yml  Cargo.toml  README.md  add-debug-log.patch  build.rs  cubeb-backend-stream_register_device_changed_callback.diff  cubeb-pulse-rs-register_device_changed_callback.diff  grcov_coverage.sh  mutex-disposal.md  run_device_tests.sh  run_test.sh  run_tests.sh  todo.md
.circleci/: config.yml
.githooks/: pre-push
.github/workflows/: nightly.yml  stable.yml  test.yml
coreaudio-sys-utils/: Cargo.toml
coreaudio-sys-utils/src/: aggregate_device.rs  audio_object.rs  audio_unit.rs  dispatch.rs  lib.rs  string.rs
gecko-patches/: remove-tests.patch
mixer/: Cargo.toml
mixer/src/: coefficient.rs  lib.rs
src/: backend.rs  capi.rs  lib.rs
src/backend/: aggregate_device.rs  async_dispatch.rs  auto_array.rs  auto_release.rs  buffer_manager.rs  cubeb_utils.rs  device_property.rs  dispatch_utils.rs  mixer.rs  mod.rs  owned_critical_section.rs  property_address.rs  resampler.rs  test.rs  utils.rs
src/backend/tests/: aggregate_device.rs  api.rs  backlog.rs  device_change.rs  device_property.rs  interfaces.rs  log.c  manual.rs  mod.rs  parallel.rs  test.rs  tone.rs  utils.rs
