[package]
name = "cubeb-coreaudio"
version = "0.1.0"
authors = ["Chun-Min Chang <chun.m.chang@gmail.com>"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
atomic = "0.4"
bitflags = "1.0"
cubeb-backend = "0.5"
core-foundation-sys = { version = "0.6" }
libc = "0.2"

[dependencies.coreaudio-sys]
default-features = false
features=["audio_unit", "core_audio"]
git = "https://github.com/ChunMinChang/coreaudio-sys/"
branch = "gecko-build"
